# dedupe-ui

./: LICENSE  README.md  dedupe_ui.py  dedupe_ui_backup.py  file_ops.py  gui.py  hashing.py  pyproject.toml  requirements.txt  stage1.py  utils.py  verifier.py
.github/workflows/: release.yml
tests/: test_e2e.py  test_gui_features.py
