[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dedupe-ui"
version = "0.1.0"
description = "Cross-platform GUI to find duplicate files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs",
]

[project.optional-dependencies]
test = ["pytest"]
