[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dedupe-ui"
version = "0.1.3"
description = "Cross-platform GUI to find duplicate files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs",
    "PySide6",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
py-modules = [
    "dedupe_ui",
    "dedupe_ui_backup",
    "hashing",
    "utils",
    "gui",
    "stage1",
    "verifier",
]
